# community-fridge-temp-door-sensor-firmware

./: CMakeLists.txt  README.md
docs/: diagram.md
include/: app_logic.h  config.h  door_sensor.h  led_status.h  sensors.h
src/: app_logic.c  door_sensor.c  led_status.c  main.c  sensors.c
